Add Cuisine place property
